# ask-intercom

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .railway-deploy  CLAUDE.md  Dockerfile  PROGRESS.md  README.md  debug_setup.md  docker-compose.yml  fastintercom_sync_state_proposal.md  package.json  pyproject.toml  railway.toml  run_tests.py  setup.sh  start.sh  test  test-quick.sh
.ask-intercom-analytics/logs/: backend-2025-06-18.jsonl  errors-2025-06-18.jsonl
.claude/: settings.json
.github/workflows/: ci.yml
docs/: 00-Vision.md  01-README.md  02-Setup.md  03-Architecture.md  04-Current-Status.md  05-Next-Steps.md  06-Decisions.md  FastIntercom-MCP-Proper-Architecture.md  FastIntercom-MCP-Update-Instructions.md  FastIntercom-Sync-Architecture.md  FastIntercomMCP-Competitive-Analysis.md  FastIntercomMCP-Spec.md  FastIntercomMCP-Test-Plan.md  FastIntercomMCP-Transition-Plan.md  GETTING_STARTED.md  MCP-Best-Practices-Guide.md  backlog.md  build-progression.md  design.canvas  fastintercom-integration.md  fastintercom-sync-solution.md  index.md  vision.md  web-deployment-strategy.md
docs/architecture/: DECISIONS.md  phase-0-architecture.md  universal-agent-design.md
docs/archive/: README.md  build-progression.md
docs/archive-old/: README.md  finding-app-id.md  index.md
docs/implementation/: logging-debugging-plan.md
docs/mcp/: integration-plan.md
docs/planning/: backlog.md  current-focus.md  icebox.md  next-up.md  roadmap.md
docs/reference/: setup-guide.md
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
promo/: tweet-ideas.md
scripts/: check-dependencies.py  check-fastintercom-health.sh  dev-check.sh  fastintercom-sync-daemon.py  fastintercom-sync.service  monitor-fastintercom.sh  poll-fastintercom-updates.sh  railway-logs.sh  setup-fastintercom.sh  start-external-fastintercom.sh  start-fastintercom-daemon.sh  start-fastintercom-mcp.sh  start-fastintercom-simple.sh  sync-fastintercom.sh  test-fastintercom-integration.sh  update-fastintercom.sh
src/: __init__.py  ai_client.py  claude_tools.py  cli.py  config.py  health.py  intercom_client.py  logger.py  logging.py  models.py  query_processor.py
tests/: __init__.py  conftest.py  test_ai_client.py  test_config.py  test_cost_info_validation.py  test_docker_setup.py  test_intercom_client.py  test_models.py
(+68 files in other folders)
